fix<arch-code-revision> refactor and clean