@@ -1,7 +1,9 @@
 package es.price.rest.api;
 
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
@@ -14,13 +16,13 @@ import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 public class ApplicationTestUtils {
 
   protected static final String TEMPLATE_PRICE_API_RESPONSE_OK =
-      "templates.json/price/response/price_api_response_ok.json";
+          "templates.json/price/response/price_api_response_ok.json";
 
   protected static final String TEMPLATE_PRICE_API_RESQUEST_OK =
-      "templates.json/price/request/price_api_resquest_ok.json";
+          "templates.json/price/request/price_api_resquest_ok.json";
 
   protected static final String TEMPLATE_PRICES_DB_ENTITY_OK =
-      "templates.json/price/entity/prices_entity.json";
+          "templates.json/price/entity/prices_entity.json";
 
   @InjectMocks
   protected ObjectMapper objectMapper;
@@ -31,14 +33,12 @@ public class ApplicationTestUtils {
   }
 
   protected String loadTemplateBody(final String fileName) throws IOException {
-    File file = new File(getClass().getClassLoader().getResource(fileName).getFile());
-    return new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
-  }
-
-  protected <T> T createObjectFromStringJson(String string, Class<T> type)
-      throws JsonProcessingException {
-    objectMapper.registerModule(new JavaTimeModule());
-    return objectMapper.readValue(string, type);
+    try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream(fileName)) {
+      if (inputStream == null) {
+        throw new FileNotFoundException("File not found: " + fileName);
+      }
+      return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+    }
   }
 
 }
